--- a/tsunagaru-kun/UI/Adddevice/Adddevice.storyboard
+++ b/tsunagaru-kun/UI/Adddevice/Adddevice.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mF8-bq-mSm">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,34 +10,57 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Devicelist-->
+        <scene sceneID="7XJ-KQ-idv">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Devicelist" id="BRs-nt-uTH" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lt5-cG-xtb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="771" y="-7"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="RbZ-PH-8hh">
             <objects>
                 <viewController id="mF8-bq-mSm" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n6K-1m-Zt2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="家電を追加する" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRX-cv-g02">
-                                <rect key="frame" x="35" y="70" width="119" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="9Wz-re-pGC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHF-mI-Wab">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="新規デバイスを追加" id="S9S-A0-onc">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="3xR-1o-Ahg">
+                                            <connections>
+                                                <segue destination="BRs-nt-uTH" kind="show" id="ZSB-Ju-ZRO"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wave_128.png" translatesAutoresizingMaskIntoConstraints="NO" id="xNA-vo-zpX">
+                                <rect key="frame" x="96" y="220" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="近くのデバイスを探しています..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5f-Jh-or6">
+                                <rect key="frame" x="32" y="356" width="257" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="wRX-cv-g02" firstAttribute="leading" secondItem="W9P-Nn-8AQ" secondAttribute="leading" constant="35" id="0Nq-gK-PN5"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="W9P-Nn-8AQ"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mI8-7C-TTS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="144.80000000000001" y="130.88455772113943"/>
+            <point key="canvasLocation" x="144.375" y="129.92957746478874"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="wave_128.png" width="128" height="128"/>
+    </resources>
 </document>
