--- a/tsunagaru-kun/Base.lproj/LaunchScreen.storyboard
+++ b/tsunagaru-kun/Base.lproj/LaunchScreen.storyboard
@@ -18,9 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="splash_img.png" translatesAutoresizingMaskIntoConstraints="NO" id="xNz-ok-fTv">
-                                <rect key="frame" x="0.0" y="20" width="389" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="Gnn-ml-Xnb">
+                                <rect key="frame" x="0.0" y="20" width="394" height="647"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -33,6 +33,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="splash_img.png" width="389" height="670"/>
+        <image name="splash" width="223.67999267578125" height="384"/>
     </resources>
 </document>
